<resources>
    <string name="app_name">Holiday Planner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_region_selection">RegionSelectionActivity</string>
    <string name="region">Region</string>
    <string name="today_holiday">Today\'s Holiday</string>
    <string name="upcoming_holiday">Upcoming Holiday</string>

    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="Jun">Jun</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="todo">TODO</string>
    <string name="days">days</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="leave_dates">Leave Dates</string>
    <string name="day_holidays">day holidays!</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="continue_txt">Continue</string>
    <string name="update_non_working_days">Update Non Working Days</string>

    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="adunit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
