<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.app.cellstudio.holidayplanner.interactor.model.BestHolidayWithAnnualLeaveModel"/>

        <import type="android.view.View"/>
        <import type="java.lang.Integer" />
    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_lirh_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_ripple"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:id="@+id/rl_lirh_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id ="@+id/rl_lirh_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/indigo_600"
                android:padding="@dimen/size_12">

                    <TextView
                        android:textColor="@color/white"
                        android:id="@+id/tv_lirhi_length"
                        android:text="@{ Integer.toString(model.numberOfHolidays) }"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_40"
                        tools:text="9"/>

                    <TextView
                        android:textColor="@color/white"
                        android:text="@string/day_holidays"
                        android:layout_below="@+id/tv_lirhi_length"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_16"
                        tools:text= "@string/day_holidays"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_lirh_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_lirh_duration"
                android:layout_marginLeft="@dimen/size_12"
                android:layout_marginRight="@dimen/size_12">

                <TextView
                    android:id="@+id/tv_lirh_start_date_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/start_date"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@color/black_87"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_23"
                    tools:text="Start Date" />

                <TextView
                    android:id="@+id/tv_lirh_start_date_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_lirh_start_date_key"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{model.startDate.toString()}"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@color/black_54"
                    android:textSize="@dimen/text_size_16"
                    tools:text="2018-10-13" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_lirh_end_date"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/size_12"
                android:layout_marginRight="@dimen/size_12"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_lirh_start_date">

                <TextView
                    android:id="@+id/tv_lirh_end_date_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/end_date"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@color/black_87"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_23"
                    tools:text="End Date" />

                <TextView
                    android:id="@+id/tv_lirh_end_date_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_lirh_end_date_key"
                    android:text="@{model.endDate.toString()}"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@color/black_54"
                    android:textSize="@dimen/text_size_16"
                    tools:text="2018-10-14" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_lirh_leave_dates"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/size_12"
                android:layout_marginRight="@dimen/size_12"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_lirh_end_date">

                <TextView
                    android:id="@+id/tv_lirh_leave_dates_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/leave_dates"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@color/black_87"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_23"
                    tools:text="Leave Dates" />

                <TextView
                    android:id="@+id/tv_lirh_leave_dates_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_lirh_leave_dates_key"
                    android:text="@{model.leaveDatesInString}"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@color/black_54"
                    android:textSize="@dimen/text_size_16"
                    tools:text="2018-10-14, 2018-10-15" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</layout>